# traffix

traffix-bot/: .gitignore  main.py  pyproject.toml  requirements.txt  tmp.py
traffix-bot/helpers/: bot.py  vectors.py
traffix-bot/services/: Google.py  Groq.py  Pinecone.py
traffix_app/: README.md  pubspec.yaml
traffix_app/android/app/: build.gradle.kts
traffix_app/android/app/src/main/: AndroidManifest.xml
traffix_app/android/app/src/main/kotlin/com/example/traffix_app/: MainActivity.kt
traffix_app/ios/Runner/: Info.plist
traffix_app/ios/Runner.xcodeproj/: project.pbxproj
traffix_app/lib/: main.dart
traffix_app/linux/: CMakeLists.txt
traffix_app/linux/runner/: my_application.cc
traffix_app/macos/Runner.xcodeproj/: project.pbxproj
traffix_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
traffix_app/macos/Runner/Configs/: AppInfo.xcconfig
traffix_app/test/: widget_test.dart
traffix_app/web/: index.html  manifest.json
traffix_app/windows/: CMakeLists.txt
traffix_app/windows/runner/: Runner.rc  main.cpp
